--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,264 @@ li,
 p {
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 a {
   color: inherit;
   text-decoration: none;
+}
+ 
+#title{
+  background-color: white;
+  position: fixed;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  border-top: 5px solid rgb(60, 47, 80);
+  border-bottom: 1px solid lightgrey;
+  z-index: 50;
+ }
+
+ #title p{
+  font-size: small;
+  color: grey;
+  font-weight: bold;
+ }
+
+ .content {
+  display:flex;
+  height: 90vh;
+  position: relative;
+  margin:0px;
+  transition: 350ms;
+  justify-content: center;
+  align-items: center;
+ }
+ 
+ .content.menuActive {
+  margin-left: 350px;
+  transition: 350ms;
+ }
+
+ .nav-menu.active {
+  left: 0;
+  transition: 350ms;
+}
+
+.nav-menu {
+  width: 350px;
+  top: 75px;
+  height: 92vh;
+  border-right: 1px solid lightgrey;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  transition: 850ms;
+  left: -100%;
+  position: fixed;
+  flex-direction: column;
+  z-index: 25;
+}
+
+#head {
+  display: flex;
+  width: 350px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+  border-bottom: 1px solid lightgrey;
+}
+
+#head h2 {
+  padding-left: 10px;
+}
+
+#sidebar{
+  top: 20px;
+  padding-left: 20px;
+  cursor: pointer;
+  position: fixed;
+  font-size:x-large;
+  font-weight: bold;
+  z-index: 100;
+ }
+
+#addNote {
+  cursor: pointer;
+  font-size:x-large;
+  font-weight: bold;
+  padding: 10px 10px 10px 10px;
+}
+
+#addNote:hover{
+  background-color: rgb(60, 47, 80);
+  color: white;
+}
+
+.no-note-selected {
+  font-size: xx-large;
+  color: grey;
+}
+
+.nav-menu-items {
+  margin:0px;
+  padding: 0px;
+  width: 350px;
+  overflow: auto;
+}
+
+.note {
+  border: 1px solid lightgrey;
+  height: 100px;
+  padding-left: 5px;
+  padding-right: 20px;
+  overflow-wrap: break-word;
+  border-right: 0px;
+  border-top: 0px;
+  cursor: pointer;
+  overflow:hidden;
+  position: relative;
+}
+
+.note:hover{
+  background-color: rgb(60, 47, 80);
+  color: white;
+}
+
+.note small {
+  top: 25px;
+  font-size: 11px;
+  color: grey;
+  position: absolute;
+}
+
+.note h3 {
+  top: 5px;
+  position: absolute;
+}
+
+
+.note.active {
+  background-color: rgb(60, 47, 80);
+  color: white;
+}
+
+#Note{
+  position: relative;
+  top: 78px;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 0px;
+  overflow: hidden;
+}
+.note-info {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  flex-shrink: 0;
+  align-items: center;
+  padding: 0px;
+  z-index: 1;
+  border-bottom: 1px solid lightgrey;
+}
+
+.button-for-note {
+  padding: 28px 20px 28px 20px;
+  cursor: pointer;
+}
+
+.button-for-note:hover{
+  background-color: rgb(60, 47, 80);
+  color: white;
+}
+
+hr {
+  border: 1px solid lightgrey;
+  width: 100%;
+}
+
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: lightgrey; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888; 
+}
+
+.List {
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.editDate {
+  border: 0px;
+  width: 200px;
+}
+
+.editDate:focus{
+  outline: none;
+}
+
+.editor-container {
+  width: 100%;
+  height: 100%;
+  border-right: 0px;
+}
+
+.ql-toolbar {
+  border: 0px !important;
+  border-bottom: 1px solid lightgrey !important;
+  padding-right: 70px !important;
+}
+
+.ql-container {
+  border: 0px !important;
+}
+
+.title-date {
+  padding-left: 15px;
+  display:flex;
+  flex-direction: column;
+}
+
+.view-text{
+  padding: 8px;
+  padding-left: 15px;
+  font-size: 13px;
+}
+
+.edit-title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: x-large;
+  border: 0px;
+}
+
+.edit-title:focus{
+  outline: none;
+}
+
+.side-note {
+  font-size: 13px;
+  position: absolute;
+  top: 45px;
+  height: 43px;
+  overflow: hidden;
 }
